=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.2
 - Changed: Various core files in preparation for GEDFact_assistant/MEDIA/ module (windmillway
 - Changed: Placed restriction on GEDFact_assistant/MEDIA/ to be PGV_USER_GEDCOM_ADMIN only (windmillway)
 - Fixed: [ 2786280 ] 4.2.1 search results in families have duplication (fisharebest)
 - Fixed: [ 2790245 ] link error in standard theme (fisharebest)
 - Changed - Various core files in preparation for GEDFact_assistant module (windmillway)
 - Changed Move various media "thumbnails" to the "index/media" subdirectory (canajun2eh)
 - Fixed Text media items not being displayed properly with Lightbox. (windmillway) 
 - Fixed [ 2789308 ] ERROR 8: Constant PGV_GOOGLE_ANALYTICS already defined (fisharebest)
 - Fixed Errors on Album page and Reorder Media page highlighted by introduction of PDO parameters (windmillway)
 - Added Comment field to "Banned by IP" and "Search engine by IP" lists on Manage Servers page (canajun2eh)
 - Fixed [ 2779222 ] Adding a wrong date destroys all individual lists (fisharebest)
 - Fixed [ 2780483 ] nick name ordering error/mess (fisharebest)
 - Fixed [ 2780414 ] Clippings Cart MySQL Error (fisharebest)
 - Fixed [ 2774786 ] [G Map Module] GOverviewMapControl Defaults to Empty Display (wooc)
 - Fixed [ 1694445 ] SVN 1593: Individual Report, Text align (wooc)
 - Added [ 2671412 ] Link to Statistics Charts from GEDCOM Statistics Block (wooc)
 - Fixed [ 2734393 ] Review Changes Diff for Appended fails (fisharebest)

Version 4.2.1 2009-04-05
 - Fixed: [ 2730614 ] SVN 5320: Media Upload fails (canajun2eh)
 - Fixed: [ 2595714 ] Truncated first letter of thumb name if non-ASCII character (fisharebest)
 - Added: Cemetery report (canajun2eh)