@@ -134,7 +134,7 @@ $pgv_lang["mygedview_myjournal_help"]	= "~SEKCJA \"MÓJ DZIENNIK\"~<br />Z dzien
 $pgv_lang["mygedview_welcome_help"]		= "~SEKCJA \"POWITANIE\"~<br />Sekcja powitania wyświetla:<ul><li>Bieżący plik GEDCOM</li><li>Datę i godzinę</li><li>Odnośniki do:<ul><li>#pgv_lang[myuserdata]#</li><li>#pgv_lang[my_pedigree]#</li><li>#pgv_lang[my_indi]#</li><li>#pgv_lang[customize_page]#</li></ul></li></ul><br /><b>Uwaga:</b><br />Odnośniki do <b>Mój Indi</b> i <b>Mój rodowód </b> zobaczysz tylko, jeśli występujesz w bieżącym pliku GEDCOM. Jeśli w aktualnym pliku GEDCOM znajduje się wpis z twoimi danymi, wówczas zobaczysz odnośniki <b>Mój Indi</b> i <b>Mój rodowód</b>, zaś jeśli nie masz w nim swojego wpisu, te odnośniki nie pojawią się.<br /><br />";
 $pgv_lang["help_pedigree.php"]			= "~STRONA RODOWODU~<br />Rodowód jest wyliczeniem wszystkich przodków wybranej osoby (korzenia). Niezalogowani użytkownicy widzą rodowód osoby wybranej przez administratora. Zalogowani użytkownicy mogą sami wybrać osobę-korzeń drzewa.<br /><br />W tym kontekście \"wszyscy przodkowie\" oznaczają ojca i matkę, ich rodziców itd. Rodowód ma postać graficzną; nie musisz przekopywać się przez tony tekstu, aby dotrzeć do swoich przodków.<br /><br />Wszystkie osoby są pokazane na ekranie w ramkach z nazwiskami.<br /><ul><li><b>Ramki z nazwiskami na diagramie</b><br />Jeśli strona rodowodu jest ustawiona w ten sposób, aby pokazywać szczegóły, zobaczysz imię i nazwisko oraz daty urodzenia i śmierci tej każdej osoby. Po kliknięciu na nazwisko osoby znajdziesz się na stronie #pgv_lang[indi_info]# dla tej osoby.<br /><br />Kiedy opcja <b>Pokazuj szczegóły</b> jest włączona, wewnątrz ramki z nazwiskiem znajdują się dwie ikonki.</li><li><b>Ikonka rodowodu wewnątrz ramki z nazwiskiem</b><br />Kiedy opcja <b>Pokazuj szczegóły</b> jest włączona, wewnątrz ramki z nazwiskiem zobaczysz ikonkę rodowodu. Zależnie od ustawień strony, po najechaniu na nią kursorem lub kliknięciu pojawi się małe podmenu.<br /><br />Elementy <b>#pgv_lang[index_header]#</b> i <b>#pgv_lang[descend_chart]#</b> są podobne do tych elementów w menu głównym, z tą różnicą, że początkową osobą dla diagramu jest teraz osoba, której dotyczy ramka. Widzisz także <b>#pgv_lang[as_spouse]#</b>. Pod tym widzisz nazwisko małżonka oraz dzieci. Na wszystkie nazwiska można kliknąć.</li><li><b>Ikonka lupy wewnątrz ramki z nazwiskiem</b><br />Zależnie od ustawień strony, po najechaniu na nią kursorem lub kliknięciu pojawi się małe podmenu. Spowoduje to powiększenie ramki i wyświetlenie większej liczby szczegółów. Zobaczysz więcej dat i wydarzeń. Na wszystkie nazwiska można kliknąć.</li><li><b>Strzałki</b><br />Po prawej lub lewej stronie ramek znajdujących się na prawym lub lewym brzegu możesz zobaczyć strzałki. Kliknięcie na nie spowoduje przesunięcie zawartości ekranu w kierunku strzałki.</li></ul><br />#pgv_lang[context_help]#<br /><br />";
 $pgv_lang["show_full_help"]			= "~UKRYJ LUB POKAŻ SZCZEGÓŁY~<br /><br />Ta opcja umożliwia pokazywanie lub ukrycie wszystkich szczegółów w ramkach z nazwiskami. Kiedy szczegóły są ukryte, na jednym ekranie może się zmieścić więcej ramek.<br /><br />Kiedy wszystkie szczegóły są ukryte, ikonka powiększania omówiona poniżej nie jest wyświetlana. Jednak jeśli administrator włączył funkcję powiększania, cała ramka będzie działała jak ikonka powiększania, pokazując wszelkie szczegóły na temat danej osoby.<br /><br />Kiedy szczegóły są widoczne i funkcja powiększania, oznaczona ikonką lupy, została włączona przez administratora, możesz wyświetlić jeszcze więcej szczegółów na temat danej osoby. Jeśli normalnie, aby powiększyć, musisz kliknąć na ikonkę powiększania, tutaj klikając na tę ikonkę możesz wyświetlić dodatkowe szczegóły. Analogicznie, jeśli możesz powiększać najeżdżając na ikonkę kursorem, tutaj ukryte szczegóły pojawią się, kiedy najedziesz na tę ikonkę.<br /><br />Po kliknięciu na ikonkę powiększania możesz przywrócić normalny poziom szczegółowości ponownie klikając na ikonkę powiększania. Jeśli szczegóły pojawiły się po najechaniu na ikonkę kursorem, ramka powróci do normalnego poziomu szczegółowości, kiedy kursor opuści obszar ikonki.<br /><br />";
-$pgv_lang["talloffset_help"]		= "~UKŁAD STRONY~<br /><br />Ta opcja pozwala określić orientację układu strony.<br /><br />Zmiana tego ustawienia może przydać się, kiedy chcesz wydrukować zawartość ekranu lub masz nietypowy ekran. Wybranie <b>pionowego</b> typu układu spowoduje wydłużenie drzewa tak, aby diagram czterech pokoleń zmieścił się na pojedynczej stronie, drukowanej pionowo. <b>Poziomy</b> typ układu spowoduje rozszerzenie drzewa tak, aby całe drzewo zmieściło się na jednej stronie, drukowanej poziomo. Wybranie opcji <b>Starsi na górze</b> spowoduje wyświetlenie osób starszych na górze wykresu, natomiast wybranie opcji <b>Starsi na dole</b> spowoduje wyświetlenie osób starszych na dole wykresu. Obie opcje nadają się bardzo dobrze do drukowania poziomych wykresów.<br /><br />To ustawienie powinno zależeć od możliwości twojej drukarki i przeznaczenia drukowanej strony.<br /><br />";
+$pgv_lang["talloffset_help"]		= "~UKŁAD STRONY~<br /><br />Ta opcja pozwala określić orientację układu strony.<br /><br />Zmiana tego ustawienia może przydać się, kiedy chcesz wydrukować zawartość ekranu lub masz nietypowy ekran.<ul><li>Typ orientacji <b>#pgv_lang[portrait]#</b> wydłuża drzewo tak, aby diagram czterech pokoleń zmieścił się na pojedynczej stronie, drukowanej pionowo.</li><li>Typ orientacji <b>#pgv_lang[landscape]#</b> rozszerza drzewo tak, aby całe drzewo zmieściło się na jednej stronie, drukowanej poziomo.</li><li>Opcja <b>#pgv_lang[landscape_top]#</b> wyświetla osoby starsze na górze wykresu.</li><li>Opcja <b>#pgv_lang[landscape_down]#</b> wyświetla osoby starsze na dole wykresu.</li></ul<br />Obie opcje nadają się bardzo dobrze do drukowania poziomych wykresów.<br /><br />";
 $pgv_lang["rootid_help"]			= "~NOWA OSOBA GŁÓWNA~<br /><br />Podaj tutaj identyfikator nowej osoby początkowej (korzenia) dla diagramu. Jeśli nie znasz odpowiedniego identyfikatora, skorzystaj z odnośnika <b>Znajdź ID</b>.<br /><br /><b>IDENTYFIKATOR (ID)</b><br />Identyfikatory używane przez PhpGedView <i>nie są</i> numerami identyfikacyjnymi nadanymi przez jakiekolwiek władze (takie jak numery dowodu tożsamości, paszportu czy prawa jazdy). W tym kontekście identyfikator jest po prostu numerem wykorzystywanym w bazie danych do rozróżniania każdej osoby, przypisany przez aplikację genealogiczną, w której został utworzony plik GEDCOM, zaimportowany następnie do PhpGedView.<br /><br />";
 $pgv_lang["PEDIGREE_GENERATIONS_help"]	= "~LICZBA POKOLEŃ~<br /><br />Tutaj możesz ustawić liczbę pokoleń, która ma się pojawić na tej stronie.<br /><br />Odpowiednia liczba zależy od wielkości twojego ekranu i tego, czy chcesz widzieć szczegóły. Czas przetwarzania będzie tym dłuższy, im więcej pokoleń będzie trzeba wyświetlić.<br /><br />";
 
